--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="ul-sidebar-header">
             <div class="ul-sidebar-header-logo">
                 <a href="javascript:void(0)">
-                    <img src="assets/img/logo.png" style="width:110px" alt="logo" class="logo">
+                    <img src="assets/img/logo.png?var=01" style="width:110px" alt="logo" class="logo">
                 </a>
             </div>
             <!-- sidebar closer -->
@@ -67,8 +67,8 @@
                 <!-- header left -->
                 <div class="header-bottom-left">
                     <div class="logo-container">
-                        <a href="javascript:void(0)" class="d-inline-block"><img src="assets/img/logo.png" alt="logo"
-                                class="logo"></a>
+                        <a href="javascript:void(0)" class="d-inline-block"><img src="assets/img/logo.png?var=01"
+                                alt="logo" class="logo"></a>
                     </div>
                 </div>
 
@@ -1913,7 +1913,7 @@
                     <!-- <div class="row ul-bs-row"> -->
                     <!-- <div class="col-4"> -->
                     <div class="ul-footer-about">
-                        <a href="javascript:void(0)" class="mb-2"><img src="assets/img/logo.png" width="100"
+                        <a href="javascript:void(0)" class="mb-2"><img src="assets/img/footer_logo.png" width="100"
                                 alt="logo"></a>
                         <p class="ul-footer-about-txt">Kalpurush Real Estates: Your trusted partner for
                             commercial
