--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon.png?var=01" type="image/x-icon">
 </head>
 
 <body>
