--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="to-go-to-sidebar-in-mobile">
                         <nav class="ul-header-nav">
                             <a href="javascript:void(0)">Home</a>
-                            <a href="javascript:void(0)">About</a>
+                            <a href="about.html">About</a>
                             <a href="javascript:void(0)">Property</a>
                             <a href="javascript:void(0)">Post Your Property</a>
                             <a href="javascript:void(0)">Blog</a>
