--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/vendor/animate-wow/animate.min.css">
 
     <!-- custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css?var=01">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 </head>
 
@@ -79,8 +79,8 @@
                             <a href="about.html">About</a>
                             <a href="javascript:void(0)">Property</a>
                             <a href="javascript:void(0)">Post Your Property</a>
-                            <a href="javascript:void(0)">Blog</a>
-                            <a href="javascript:void(0)">Contact</a>
+
+                            <a href="contact.html">Contact</a>
                         </nav>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
         <!-- BREADCRUMB SECTION START -->
         <div class="ul-breadcrumb">
             <div class="wow animate__fadeInUp">
-                <h1 class="ul-breadcrumb-title">About Kalpurush Real Estate Consultancy</h1>
+                <h1 class="ul-breadcrumb-title">About Kalpurush Real Estate</h1>
                 <div class="ul-breadcrumb-nav">
                     <a href="index-2.html">Home</a>
                     <span class="separator"><i class="flaticon-aro-left"></i></span>
@@ -124,8 +124,8 @@
                 <div class="ul-inner-page-container">
                     <div class="row">
                         <div class="col text-center">
-                            <span class="ul-section-sub-title">Why choose us</span>
-                            <h2 class="ul-section-title">We Bring Your Dream Homes to Reality</h2>
+                            <!-- <span class="ul-section-sub-title"></span> -->
+                            <h2 class="ul-section-title">Why Choose Us</h2>
                             <p class="ul-why-choose-us-heading-descr">Established in 2022, Kalpurush Real Estate
                                 specializes in residential and commercial properties across Durgapur, Kolkata, and
                                 West Bengal. We cater to both rental and premium registered properties, ensuring
