--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
                                             <p class="ul-why-choose-us-list-item-descr">
                                                 <b>Rental & Outright Sales:</b>
                                                 Flats, row houses, penthouses, villas, and residential plots ranging
-                                                from 4,000 sq. ft. to acres. <br>
+                                                from 500 sq. ft. to acres. <br>
                                                 <b>Premium Properties:</b>
                                                 Exclusive flats priced between ₹20 lakh and ₹60 crore in posh areas
                                                 developed by reputed builders.
@@ -357,14 +357,9 @@
                                     <span class="ul-hiw-step-number">05</span>
                                     <h3 class="ul-hiw-step-title">Commercial Areas</h3>
                                     <p class="ul-hiw-step-descr">
-                                        Our commercial offerings are strategically located to ensure seamless property
-                                        visits and facilitate smooth transactions. These properties cater to businesses
-                                        across West Bengal, providing optimal solutions for offices, showrooms, and
-                                        retail spaces.
-                                        <br>
-                                        <br>
-                                        With our in-depth knowledge of these regions, we aim to help clients find their
-                                        ideal property, whether for living or investment.
+                                        Durgapur, City Centre, Bidhannagar, Benachity, Fuljhore, Muchipara,
+                                        Railway Station Road.
+
                                     </p>
                                 </div>
                             </div>
