--- a/about.html
+++ b/about.html
@@ -355,9 +355,9 @@
                                 <span class="ul-hiw-step-vertical-txt">Strategic Commercial Property Solutions</span>
                                 <div class="ul-hiw-step-txt-right">
                                     <span class="ul-hiw-step-number">05</span>
-                                    <h3 class="ul-hiw-step-title">Commercial Areas</h3>
+                                    <h3 class="ul-hiw-step-title">Durgapur</h3>
                                     <p class="ul-hiw-step-descr">
-                                        Durgapur, City Centre, Bidhannagar, Benachity, Fuljhore, Muchipara,
+                                        City Centre, Bidhannagar, Benachity, Fuljhore, Muchipara,
                                         Railway Station Road.
 
                                     </p>
