--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <!-- header -->
         <div class="ul-sidebar-header">
             <div class="ul-sidebar-header-logo">
-                <a href="index-2.html">
+                <a href="index.html">
                     <img src="assets/img/logo-dark.svg" alt="logo" class="logo">
                 </a>
             </div>
@@ -66,7 +66,7 @@
                 <!-- header left -->
                 <div class="header-bottom-left">
                     <div class="logo-container">
-                        <a href="/" class="d-inline-block"><img src="assets/img/logo.png?var=01" alt="logo"
+                        <a href="index.html" class="d-inline-block"><img src="assets/img/logo.png?var=01" alt="logo"
                                 class="logo"></a>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                 <div class="ul-header-nav-wrapper">
                     <div class="to-go-to-sidebar-in-mobile">
                         <nav class="ul-header-nav">
-                            <a href="/">Home</a>
+                            <a href="index.html">Home</a>
                             <a href="about.html">About</a>
                             <a href="javascript:void(0)">Property</a>
                             <a href="javascript:void(0)">Post Your Property</a>
@@ -110,7 +110,7 @@
             <div class="wow animate__fadeInUp">
                 <h1 class="ul-breadcrumb-title">About Kalpurush Real Estate</h1>
                 <div class="ul-breadcrumb-nav">
-                    <a href="index-2.html">Home</a>
+                    <a href="index.html">Home</a>
                     <span class="separator"><i class="flaticon-aro-left"></i></span>
                     <span class="current-page">About us</span>
                 </div>
