--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                             <a href="about.html">About</a>
                             <a href="javascript:void(0)">Property</a>
                             <a href="javascript:void(0)">Post Your Property</a>
-                            <a href="javascript:void(0)">Blog</a>
-                            <a href="javascript:void(0)">Contact</a>
+
+                            <a href="contact.html">Contact</a>
                         </nav>
                     </div>
                 </div>
