--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                                 <p class="ul-banner-slide-descr">Share your requirements, and we’ll
                                                     ensure a seamless property deal experience.</p>
                                                 <div class="ul-banner-slide-btns">
-                                                    <a href="javascript:void(0)" class="ul-btn">Get in Touch Today</a>
+                                                    <a href="javascript:void(0)" class="ul-btn">Post Your Property</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -194,8 +194,7 @@
                                                 <p class="ul-banner-slide-descr">Looking for an office, retail store, or
                                                     warehouse across West Bengal, Sikkim, or Eastern India?</p>
                                                 <div class="ul-banner-slide-btns">
-                                                    <a href="javascript:void(0)" class="ul-btn">Find Your Property
-                                                        Now</a>
+                                                    <a href="javascript:void(0)" class="ul-btn">Buy, Sell & Rent</a>
                                                 </div>
                                             </div>
                                         </div>
