--- a/about.html
+++ b/about.html
@@ -126,7 +126,8 @@
                         <div class="col text-center">
                             <!-- <span class="ul-section-sub-title"></span> -->
                             <h2 class="ul-section-title">Why Choose Us</h2>
-                            <p class="ul-why-choose-us-heading-descr">Established in 2022, Kalpurush Real Estate
+                            <p class="ul-why-choose-us-heading-descr">The idea of providing seamless property solutions
+                                to all Established in 2022, Kalpurush Real Estate
                                 specializes in residential and commercial properties across Durgapur, Kolkata, and
                                 West Bengal. We cater to both rental and premium registered properties, ensuring
                                 quality service for all our clients.</p>
