--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <a href="javascript:void(0)">Home</a>
                             <a href="about.html">About</a>
                             <a href="javascript:void(0)">Property</a>
-                            <a href="javascript:void(0)">Post Your Property</a>
+                            <a href="post-your-property.html">Post Your Property</a>
 
                             <a href="contact.html">Contact</a>
                         </nav>
@@ -155,8 +155,8 @@
                                         <div class="col-md-9 col-sm-8">
                                             <span class="ul-banner-slide-shadow-title">KALPURUSH</span>
                                             <div class="ul-banner-slide-txt wow animate__fadeInUp">
-                                                <span class="ul-banner-slide-sub-title">Clients like SBI Credit Card,
-                                                    Godrej.</span>
+                                                <span class="ul-banner-slide-sub-title">CLIENTS Facilities VASTU,
+                                                    INTERIOR DECORATING, EVENT MANAGEMENT.</span>
                                                 <h1 class="ul-banner-slide-title">Partner with Property Experts
                                                 </h1>
                                                 <p class="ul-banner-slide-descr">Share your requirements, and we’ll
@@ -190,11 +190,11 @@
                                             <span class="ul-banner-slide-shadow-title">KALPURUSH</span>
                                             <div class="ul-banner-slide-txt wow animate__fadeInUp">
                                                 <span class="ul-banner-slide-sub-title">Seamless property deal</span>
-                                                <h1 class="ul-banner-slide-title">Grow Your Property Network</h1>
+                                                <h1 class="ul-banner-slide-title">Searching West Bengal property</h1>
                                                 <p class="ul-banner-slide-descr">Looking for an office, retail store, or
                                                     warehouse across West Bengal, Sikkim, or Eastern India?</p>
                                                 <div class="ul-banner-slide-btns">
-                                                    <a href="javascript:void(0)" class="ul-btn">Buy, Sell & Rent</a>
+                                                    <a href="javascript:void(0)" class="ul-btn">Rent - Buy - Sale</a>
                                                 </div>
                                             </div>
                                         </div>
