--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/vendor/animate-wow/animate.min.css">
 
     <!-- custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css?var=01">
     <link rel="shortcut icon" href="assets/img/favicon.png?var=01" type="image/x-icon">
 </head>
 
@@ -190,7 +190,9 @@
                                             <span class="ul-banner-slide-shadow-title">KALPURUSH</span>
                                             <div class="ul-banner-slide-txt wow animate__fadeInUp">
                                                 <span class="ul-banner-slide-sub-title">Seamless property deal</span>
-                                                <h1 class="ul-banner-slide-title">Searching West Bengal property</h1>
+                                                <h1 class="ul-banner-slide-title large">Searching Properties
+                                                    in west bengal
+                                                </h1>
                                                 <p class="ul-banner-slide-descr">Looking for an office, retail store, or
                                                     warehouse across West Bengal, Sikkim, or Eastern India?</p>
                                                 <div class="ul-banner-slide-btns">
