--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/vendor/animate-wow/animate.min.css">
 
     <!-- custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css?var=01">
+    <link rel="stylesheet" href="assets/css/style.css?var=03">
     <link rel="shortcut icon" href="assets/img/favicon.png?var=01" type="image/x-icon">
 </head>
 
@@ -190,11 +190,11 @@
                                             <span class="ul-banner-slide-shadow-title">KALPURUSH</span>
                                             <div class="ul-banner-slide-txt wow animate__fadeInUp">
                                                 <span class="ul-banner-slide-sub-title">Seamless property deal</span>
-                                                <h1 class="ul-banner-slide-title large">Searching Properties
-                                                    in west bengal
+                                                <h1 class="ul-banner-slide-title large">Searching Property
+                                                    in Bengal
                                                 </h1>
-                                                <p class="ul-banner-slide-descr">Looking for an office, retail store, or
-                                                    warehouse across West Bengal, Sikkim, or Eastern India?</p>
+                                                <p class="ul-banner-slide-descr">Looking for property solutions <br>
+                                                    within West Bengal.</p>
                                                 <div class="ul-banner-slide-btns">
                                                     <a href="javascript:void(0)" class="ul-btn">Rent - Buy - Sale</a>
                                                 </div>
@@ -226,7 +226,7 @@
                             <!-- single slide -->
                             <div class="swiper-slide">
                                 <span class="address-1">Kolkata</span>
-                                <span class="address-2"> West Bangal</span>
+                                <span class="address-2"> West Bengal</span>
                             </div>
 
                             <!-- single slide -->
@@ -237,7 +237,7 @@
 
                             <!-- single slide -->
                             <div class="swiper-slide">
-                                <span class="address-1">Bangal</span>
+                                <span class="address-1">Bengal</span>
                                 <span class="address-2">address goes here</span>
                             </div>
                         </div>
