--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
                                             <span class="ul-banner-slide-shadow-title">KALPURUSH</span>
                                             <div class="ul-banner-slide-txt wow animate__fadeInUp">
                                                 <span class="ul-banner-slide-sub-title">Seamless property deal</span>
-                                                <h1 class="ul-banner-slide-title large">Searching Property
-                                                    in Bengal
+                                                <h1 class="ul-banner-slide-title large">Grow Your Property Network
                                                 </h1>
                                                 <p class="ul-banner-slide-descr">Looking for property solutions <br>
                                                     within West Bengal.</p>
