--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <a href="javascript:void(0)">Home</a>
                             <a href="about.html">About</a>
                             <a href="javascript:void(0)">Property</a>
-                            <a href="post-your-property.html">Post Your Property</a>
+                            <a href="property-portal.html#postproperty">Post Your Property</a>
 
                             <a href="contact.html">Contact</a>
                         </nav>
@@ -162,7 +162,8 @@
                                                 <p class="ul-banner-slide-descr">Share your requirements, and we’ll
                                                     ensure a seamless property deal experience.</p>
                                                 <div class="ul-banner-slide-btns">
-                                                    <a href="javascript:void(0)" class="ul-btn">Post Your Property</a>
+                                                    <a href="property-portal.html#postproperty" class="ul-btn">Post
+                                                        Your Property</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -195,7 +196,9 @@
                                                 <p class="ul-banner-slide-descr">Looking for property solutions <br>
                                                     within West Bengal.</p>
                                                 <div class="ul-banner-slide-btns">
-                                                    <a href="javascript:void(0)" class="ul-btn">Rent - Buy - Sale</a>
+                                                    <a href="property-portal.html#rentbuysale" class="ul-btn">Rent -
+                                                        Buy -
+                                                        Sale</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -1057,7 +1060,8 @@
         <!-- PROPERTY FILTER SEARCH SECTION START -->
         <section class="ul-property-filter-search ul-section-spacing pt-0">
             <div class="ul-property-filter-search-container">
-                <h3 class="ul-property-filter-search-title text-center wow animate__fadeInUp">Search Your Property</h3>
+                <h3 class="ul-property-filter-search-title text-center wow animate__fadeInUp">Join As Property Partner
+                </h3>
                 <form action="#" class="ul-property-filter-search-form wow animate__fadeInUp">
                     <div class="form-group">
                         <label for="filter-location">Location</label>
@@ -1071,7 +1075,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="filter-property-type">Property Type</label>
+                        <label for="filter-property-type">Channel Partner</label>
                         <select name="property-type" id="filter-property-type">
                             <option value="apartment">Apartment</option>
                             <option value="office">Office</option>
@@ -1081,13 +1085,11 @@
                     <div class="form-group">
                         <label for="filter-price">Price</label>
                         <select name="price" id="filter-price">
-                            <option value="200-500">$200 - $500</option>
-                            <option value="500-1000">$500 - $1000</option>
-                            <option value="1000-1500">$1000 - $1500</option>
+                            <option value="free">Post For Free</option>
                         </select>
                     </div>
 
-                    <button type="submit"><span class="icon"><i class="flaticon-search"></i></span> Search</button>
+                    <button type="submit"><span class="icon"><i class="flaticon-search"></i></span> Submit</button>
                 </form>
             </div>
         </section>
@@ -1198,7 +1200,7 @@
                             <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-8.jpg"
                                         alt="City Image"></a></div>
                             <div class="txt">
-                                <h3 class="ul-city-title"><a href="javascript:void(0)">Raiganj</a></h3>
+                                <h3 class="ul-city-title"><a href="javascript:void(0)">Bankura</a></h3>
                                 <span class="ul-city-count">15 Properties</span>
                             </div>
                         </div>
@@ -1566,10 +1568,10 @@
 
                             <div class="ul-facilities-list">
                                 <ul>
-                                    <li>Living rooms are pre-wired for Surround</li>
-                                    <li>Luxurious interior design and amenities</li>
-                                    <li>Private balconies with stunning views</li>
-                                    <li>A rare combination of inspired architecture</li>
+                                    <li>Interior Decorating</li>
+                                    <li>Vastu</li>
+                                    <li>Flower Decorations</li>
+                                    <li>Event Managemens</li>
                                 </ul>
                             </div>
 
